Add exception handler for ACL resource exhaustion case