@@ -1,5 +1,6 @@
 package bio.terra.service.snapshot.flight.create;
 
+import bio.terra.common.FlightUtils;
 import bio.terra.common.iam.AuthenticatedUserRequest;
 import bio.terra.grammar.Query;
 import bio.terra.grammar.google.BigQueryVisitor;
@@ -16,35 +17,17 @@ import bio.terra.stairway.FlightContext;
 import bio.terra.stairway.Step;
 import bio.terra.stairway.StepResult;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.Map;
 
-public class CreateSnapshotPrimaryDataQueryGcpStep
+public record CreateSnapshotPrimaryDataQueryGcpStep(
+    BigQuerySnapshotPdao bigQuerySnapshotPdao,
+    SnapshotService snapshotService,
+    DatasetService datasetService,
+    SnapshotDao snapshotDao,
+    SnapshotRequestModel snapshotReq,
+    AuthenticatedUserRequest userRequest,
+    Dataset sourceDataset)
     implements CreateSnapshotPrimaryDataQueryInterface, Step {
-  private final BigQuerySnapshotPdao bigQuerySnapshotPdao;
-  private final SnapshotService snapshotService;
-  private final DatasetService datasetService;
-  private final SnapshotDao snapshotDao;
-  private final SnapshotRequestModel snapshotReq;
-  private final AuthenticatedUserRequest userRequest;
-  private final Dataset sourceDataset;
-
-  public CreateSnapshotPrimaryDataQueryGcpStep(
-      BigQuerySnapshotPdao bigQuerySnapshotPdao,
-      SnapshotService snapshotService,
-      DatasetService datasetService,
-      SnapshotDao snapshotDao,
-      SnapshotRequestModel snapshotReq,
-      AuthenticatedUserRequest userRequest,
-      Dataset sourceDataset) {
-    this.bigQuerySnapshotPdao = bigQuerySnapshotPdao;
-    this.snapshotService = snapshotService;
-    this.datasetService = datasetService;
-    this.snapshotDao = snapshotDao;
-    this.snapshotReq = snapshotReq;
-    this.userRequest = userRequest;
-    this.sourceDataset = sourceDataset;
-  }
 
   @Override
   public StepResult doStep(FlightContext context) throws InterruptedException {
@@ -60,8 +43,11 @@ public class CreateSnapshotPrimaryDataQueryGcpStep
       String sqlQuery,
       Instant filterBefore)
       throws InterruptedException {
-    bigQuerySnapshotPdao.createSnapshotByQuery(
-        assetSpecification, snapshot, sqlQuery, filterBefore);
+    FlightUtils.handleGcpAclException(
+        context,
+        () ->
+            bigQuerySnapshotPdao.createSnapshotByQuery(
+                assetSpecification, snapshot, sqlQuery, filterBefore));
     return StepResult.getStepResultSuccess();
   }
 
@@ -75,9 +61,7 @@ public class CreateSnapshotPrimaryDataQueryGcpStep
   @Override
   public String translateQuery(Query query, Dataset dataset) {
     DatasetModel datasetModel = datasetService.retrieveModel(dataset, userRequest);
-    Map<String, DatasetModel> datasetMap =
-        Collections.singletonMap(dataset.getName(), datasetModel);
-    BigQueryVisitor bqVisitor = new BigQueryVisitor(datasetMap);
+    BigQueryVisitor bqVisitor = new BigQueryVisitor(Map.of(dataset.getName(), datasetModel));
     return query.translateSql(bqVisitor);
   }
 
